fixed text alignment in chat history

--- a/public/qteach-styles.css
+++ b/public/qteach-styles.css
@@ -107,7 +107,8 @@ body{
     margin: 5px;
     margin-left: 0px;
     font-weight: bold;
-    
+    display: table-cell;
+    vertical-align: top;
 }
 
 #chat-history > div > p {
